@@ -22,7 +22,7 @@ content="Matt Newman &lt;matt@novadigm.com&gt;">
     <dd><a href="#SYNOPSIS">SYNOPSIS</a> </dd>
     <dd><dl>
             <dd><b>package require Tcl </b><em>?8.2?</em></dd>
-            <dd><b>package require tls </b><em>?1.4?</em></dd>
+            <dd><b>package require tls </b><em>?1.5?</em></dd>
             <dt>&nbsp;</dt>
             <dd><b>tls::init </b><i>?options?</i> </dd>
             <dd><b>tls::socket </b><em>?options? host port</em></dd>
@@ -52,7 +52,7 @@ toolkit.</p>
 <h3><a name="SYNOPSIS">SYNOPSIS</a></h3>
 
 <p><b>package require Tcl 8.2</b><br>
-<b>package require tls 1.4</b><br>
+<b>package require tls 1.5</b><br>
 <br>
 <a href="#tls::init"><b>tls::init </b><i>?options?</i><br>
 </a><a href="#tls::socket"><b>tls::socket </b><em>?options? host
@@ -76,10 +76,10 @@ API for Tcl 8.2 and higher. The sockets behave exactly the same
 as channels created using Tcl's built-in <strong>socket</strong>
 command with additional options for controlling the SSL session.
 To use TLS with an earlier version of Tcl than 8.2, please obtain
-TLS v1.3.  Please note that there are known limitations with the
+TLS 1.3.  Please note that there are known limitations with the
 stacked channel implementation prior to 8.3.2, so it is recommended
-that TLS is used with an 8.3.2+ interpreter.  TLS v1.4 will work
-with 8.2+, it is just more stable with 8.3.2+.
+that TLS is used with an 8.3.2+ interpreter.  The current version
+of TLS will work with Tcl 8.2+, it is just more stable with 8.3.2+.
 </p>
 
 <h3><a name="COMMANDS">COMMANDS</a></h3>
